@@ -1,3 +1,9 @@
+2012-10-08 Borut Razem <borut.razem AT gmail.com>
+
+	* support/sdbinutils/include/opcode/ia64.h: added since build
+	  on IA64 fails with elf64-ia64.c:27:25: error: opcode/ia64.h:
+	  No such file or directory
+
 2012-10-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/mcs51/gen.c (genPagedPointerGet): fixed bug #3527222
